Authentication and admin features added